# Sentinel

./: Build.xml  CMakeLists.txt  README.md  build-app.hxml  build-cli.hxml  build-cpp.hxml  build-hl.hxml  build-hlc.hxml  build-test.hxml  build.hxml  com.sentinel.security.plist  install.sh  sentinel.entitlements
assets/: alerts-view.xml  config-view.xml  main.xml  sentinel-theme.css
native/: Makefile  sentinel_socket.c  sentinel_socket.hdll  sentinel_socket_cpp.cpp
src/sentinel/: CLI.hx  Main.hx  index.html
src/sentinel/ai/: AIEngine.hx  AIResult.hx  GitHubFetcher.hx  RepoData.hx
src/sentinel/app/: AlertsView.hx  ConfigView.hx  SentinelApp.hx
src/sentinel/config/: Config.hx
src/sentinel/core/: EventBus.hx  IModule.hx  Logger.hx  RiskLevel.hx
src/sentinel/gui/: Alert.hx  AlertStore.hx
src/sentinel/modules/: ExtensionMonitor.hx  NetworkMonitor.hx  TerminalWatcher.hx  UpdateMonitor.hx
src/sentinel/platform/: HttpsClient.hx  MacSecurity.hx  Signal.hx  UnixSocket.hx  UnixSocketServer.hx  Verdict.hx
src/sentinel/tests/: SocketTest.hx
